2006-03-10  Alan Coopersmith  <alan.coopersmith@sun.com>

	* chooser.c: 
	Coverity ids #722, 723, 724, 725, 726, 727, 728:
	Need to XtFree the values returned by XawListShowCurrent to plug
	memory leaks.

	* socket.c (UpdateMcastGroup): 
	Coverity id #834:  
	After joining a multicast group, add group pointer to the list of
	active multicast groups instead of just leaking the group pointer.

2006-03-09  Alan Coopersmith  <alan.coopersmith@sun.com>

	* socket.c: (CreateSocklistEntry):
	Coverity id #332: 
	When malloc fails, don't just print an error and continue on using
	the NULL pointer, return NULL to the caller.

2006-03-01  Matthias Hopf  <mhopf@suse.de>

	* greeter/verify.c: (PAM_conv):
	openSUSE bug #142954
	Fixed potential segfault on OOM condition.

2006-02-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* session.c:
	Bug #6036 <https://bugs.freedesktop.org/show_bug.cgi?id=6036>
	Check for key_setnet declaration before defining it to avoid
	compiler error of conflicting types on DragonFly BSD

2006-02-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* netaddr.c: 
	Bug #6026 <https://bugs.freedesktop.org/show_bug.cgi?id=6026>
	Segfault in netaddr.c:ConvertAddr if ifa_addr is NULL
	(Loser Mcloser <reebydobalina@yahoo.ca>)

2006-02-24  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: Alan.Coopersmith@Sun.COM

	* config/Xsession.cpp:
	Bug #5897 <https://bugs.freedesktop.org/show_bug.cgi?id=5897>
	Create xsession error file with umask 077 instead of chmod
	a moment later. This was reported by Steven M. Bellovin to NetBSD.
	<http://www.netbsd.org/cgi-bin/query-pr-single.pl?number=32804>

2006-02-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* greeter/Login.c: 
	Bug #1391 <https://bugs.freedesktop.org/show_bug.cgi?id=1391>
	Patch #4739 <https://bugs.freedesktop.org/attachment.cgi?id=4739>
	xdm hangs in a loop when invalid xpm bitmap is used for logo
	(Costantino Leandro <lcostantino@gmail.com>)
